adjusted index svh and fixed img spacing

--- a/css/style.css
+++ b/css/style.css
@@ -535,16 +535,21 @@ section {
 /* Hero Sections */
 .container .hero {
     position: relative;
-    top: 2em;
-    margin-bottom: 3em;
+    /* top: 2em;
+    margin-bottom: 3em; */
 }
 
 .hero {
     /* background: rgba(223, 236, 253, 1); */
     border-top: none;
-    padding: 8em 1em 8em 1em;
-    margin-bottom: 1.5em;
+    /* padding: 8em 1em 8em 1em; */
+    /* margin-bottom: 1.5em; */
+    min-height: 80svh;
+    display: grid;
+    place-items: center;
+    padding: 10svh 1em;
     /* background-color: rgba(253, 247, 223, 1); */
+    background-color: lightgreen;
 }
 .hero h1, .hero h2 {
     font-style: 3em;
@@ -964,6 +969,10 @@ form input [type=reset]:hover {
 /* SPECIFIC PAGE CUSTOMIZATIONS */
 /* HOME PAGE */
 .landing {
+    min-height: 80svh;
+    display: grid;
+    place-items: center;
+    padding: 10svh 1em;
     h2 {
         margin-top: 0;  
     }
@@ -1056,6 +1065,11 @@ form input [type=reset]:hover {
         position: relative;
     }
     .one-third {
-        
+        padding-top: 3em;
+    }
+    @media (max-width: 768px) {
+        .two-thirds, .one-third{
+            margin: 0%;
+        }
     }
 }
